lab_6/app/k8s/optional/ingress/ingress-nginx.sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab6-frontend-ingress
  namespace: lab6-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: lab6.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lab6-frontend
                port:
                  number: 80
